--- a/locale/flarum-mentions.yml
+++ b/locale/flarum-mentions.yml
@@ -9,18 +9,18 @@ flarum-mentions:
 
     # These translations are used by the composer (reply autocompletion function).
     composer:
-      reply_to_post_text: "Reply to #{number}"
+      reply_to_post_text: "Reactie op #{number}"
 
     # These translations are used by the Notifications dropdown, a.k.a. "the bell".
     notifications:
       others_text: => core.ref.some_others
-      post_mentioned_text: "{username} replied to your post"  # Can be pluralized to agree with the number of users!
-      user_mentioned_text: "{username} mentioned you"
+      post_mentioned_text: "{username} heeft gereageerd op je bericht|{username} hebben gereageerd op je bericht"  # Can be pluralized to agree with the number of users!
+      user_mentioned_text: "{username} heeft je genoemd"
 
     # These translations are displayed beneath individual posts.
     post:
-      mentioned_by_self_text: "{users} replied to this."  # Can be pluralized to agree with the number of users!
-      mentioned_by_text: "{users} replied to this."       # Can be pluralized to agree with the number of users!
+      mentioned_by_text: "{users} heeft hierop gereageerd|{users} hebben hierop gereageerd"       # Can be pluralized to agree with the number of users!
+      mentioned_by_self_text: "{users} hebt hierop gereageerd|{users} hebben hierop gereageerd"  # Can be pluralized to agree with the number of users!
       others_text: => core.ref.some_others
       quote_button: Quote
       reply_link: => core.ref.reply
@@ -28,9 +28,9 @@ flarum-mentions:
 
     # These translations are used in the Settings page.
     settings:
-      notify_post_mentioned_label: Someone replies to one of my posts
-      notify_user_mentioned_label: Someone mentions me in a post
+      notify_post_mentioned_label: Iemand reageert op mijn berichten
+      notify_user_mentioned_label: Iemand noemt mij in een bericht
 
     # These translations are used in the user profile page and profile popup.
     user:
-      mentions_link: Mentions
+      mentions_link: Benoemingen
