--- a/locale/flarum-tags.yml
+++ b/locale/flarum-tags.yml
@@ -13,82 +13,82 @@ flarum-tags:
 
     # These translations are used in the Edit Tag modal dialog.
     edit_tag:
-      color_label: Color
-      delete_tag_button: Delete Tag
-      delete_tag_confirmation: "Are you sure you want to delete this tag? The tag's discussions will NOT be deleted."
-      description_label: Description
-      hide_label: Hide from All Discussions
+      color_label: Kleur
+      delete_tag_button: Verwijder label
+      delete_tag_confirmation: "Weet je zeker dat je dit label wilt verwijderen? De bijbehorende discussie zal NIET worden verwijderd."
+      description_label: Omschrijving
+      hide_label: Verbergen voor alle discussies
       name_label: => flarum-tags.ref.name
       name_placeholder: => flarum-tags.ref.name
-      slug_label: Slug
+      slug_label: Link
       submit_button: => core.ref.save_changes
       title: => flarum-tags.ref.create_tag
 
     # These translations are used in the navigation bar.
     nav:
       tags_button: => flarum-tags.ref.tags
-      tags_text: Manage the list of tags available to organise discussions with.
+      tags_text: Beheer de lijst met beschikbare labels om je discussies mee te organiseren.
 
     # These translations are used in the Permissions page of the admin interface.
     permissions:
-      allow_edit_tags_label: Allow tag editing
-      restrict_by_tag_heading: Restrict by Tag
-      tag_discussions_label: Tag discussions
+      allow_edit_tags_label: Sta bewerken van labels toe
+      restrict_by_tag_heading: Beperken per label
+      tag_discussions_label: Label discussies
 
     # These translations are used in the Tag Settings modal dialog.
     tag_settings:
-      range_separator_text: " to "
-      required_primary_heading: Required Number of Primary Tags
-      required_primary_text: Enter the minimum and maximum number of primary tags that may be applied to a discussion.
-      required_secondary_heading: Required Number of Secondary Tags
-      required_secondary_text: Enter the minimum and maximum number of secondary tags that may be applied to a discussion.
-      title: Tag Settings
+      range_separator_text: " tot "
+      required_primary_heading: Vereist aantal primaire labels
+      required_primary_text: Kies het minimale en maximale aantal van primaire labels die aan discussie toegevoegd mogen worden.
+      required_secondary_heading: Vereist aantal secundaire labels
+      required_secondary_text: Kies het minimale en maximale aantal van secundaire labels die aan discussie toegevoegd mogen worden.
+      title: Label instellingen
 
     # These translations are used in the Tags page.
     tags:
-      about_tags_text: "Tags are used to categorize discussions. Primary tags are like traditional forum categories: they can be arranged in a two-level hierarchy. Secondary tags do not have hierarchy or order, and are useful for micro-categorization."
+      about_tags_text: "Labels worden gebruikt voor het indelen van discussies. Primaire labels lijken op traditionele forum categorieën: ze kunnen worden gerangschikt op een twee-lagen hierarchie. Secondaire labels hebben geen hierarchie of volgorde en zijn erg handig voor micro-categorisatie."
       create_tag_button: => flarum-tags.ref.create_tag
-      primary_heading: Primary Tags
-      secondary_heading: Secondary Tags
-      settings_button: Settings
+      primary_heading: Primaire labels
+      secondary_heading: Secundaire labels
+      settings_button: Instellingen
 
   # Translations in this namespace are used by the forum user interface.
   forum:
 
     # These translations are used by the Choose Tags modal dialog.
     choose_tags:
-      choose_primary_placeholder: "Choose a primary tag|Choose {count} primary tags"
-      choose_secondary_placeholder: "Choose 1 more tag|Choose {count} more tags"
-      edit_title: "Edit Tags for {title}"
+      choose_primary_placeholder: "Kies een primair label|Kies {count} primaire labels""
+      choose_secondary_placeholder: "Kies nog 1 extra label|Kies nog {count} extra labels"
+      edit_title: "Labels bewerken voor {title}"
       submit_button: => core.ref.okay
-      title: Choose Tags for Your Discussion
+      title: Kies labels voor je discussie
 
     # These translations are used by the composer when starting a discussion.
     composer_discussion:
-      choose_tags_link: Choose Tags
+      choose_tags_link: Kies labels
 
     # These translations are used by the discussion control buttons.
     discussion_controls:
-      edit_tags_button: Edit Tags
+      edit_tags_button: Bewerk labels
 
     # These translations are used on the index page, peripheral to the discussion list.
     index:
-      more_link: More...
+      more_link: Meer...
       tags_link: => flarum-tags.ref.tags
-      untagged_link: Untagged
+      untagged_link: Ongelabeld
 
     # These translations are displayed between posts in the post stream.
     post_stream:
-      added_tags_text: "{username} added the {tagsAdded}."
-      added_and_removed_tags_text: "{username} added the {tagsAdded} and removed the {tagsRemoved}."
-      removed_tags_text: "{username} removed the {tagsRemoved}."
-      tags_text: "{tags} tag|{tags} tags"
+      added_tags_text: "{username} heeft de {tagsAdded} toegevoegd."
+      added_and_removed_tags_text: "{username} heeft de {tagsAdded} toegevoegd en de {tagsRemoved} verwijderd."
+      removed_tags_text: "{username} heeft de {tagsRemoved} verwijderd."
+      tags_text: "{tags} label|{tags} labels"
 
   # Translations in this namespace are used by the forum and admin interfaces.
   lib:
 
     # This translation is displayed in place of the name of a tag that's been deleted.
-    deleted_tag_text: Deleted
+    deleted_tag_text: Verwijderd
 
   ##
   # REUSED TRANSLATIONS - These keys should not be used directly in code!
@@ -96,6 +96,6 @@ flarum-tags:
 
   # Translations in this namespace are referenced by two or more unique keys.
   ref:
-    create_tag: Create Tag
-    name: Name
-    tags: Tags
+    create_tag: Maak label
+    name: Naam
+    tags: Labels
