--- a/locale/validation.yml
+++ b/locale/validation.yml
@@ -1,80 +1,80 @@
 validation:
-  accepted: "The :attribute must be accepted."
-  active_url: "The :attribute is not a valid URL."
-  after: "The :attribute must be a date after :date."
-  after_or_equal: "The :attribute must be a date after or equal to :date."
-  alpha: "The :attribute may only contain letters."
-  alpha_dash: "The :attribute may only contain letters, numbers, and dashes."
-  alpha_num: "The :attribute may only contain letters and numbers."
-  array: "The :attribute must be an array."
-  before: "The :attribute must be a date before :date."
-  before_or_equal: "The :attribute must be a date before or equal to :date."
+  accepted: ":attribute moet worden geaccepteerd."
+  active_url: ":attribute is geen geldige URL."
+  after: ":attribute moet een datum zijn na :date."
+  after_or_equal: ":attribute moet een datum zijn na of op :date."
+  alpha: ":attribute mag alleen letters bevatten."
+  alpha_dash: ":attribute mag alleen letters, cijfers of streepjes bevatten."
+  alpha_num: ":attribute mag alleen letters en cijfers bevatten."
+  array: ":attribute moet een array zijn."
+  before: ":attribute moet een datum zijn voor :date."
+  before_or_equal: ":attribute moet een datum zijn voor of op :date."
   between:
-    numeric: "The :attribute must be between :min and :max."
-    file: "The :attribute must be between :min and :max kilobytes."
-    string: "The :attribute must be between :min and :max characters."
-    array: "The :attribute must have between :min and :max items."
-  boolean: "The :attribute field must be true or false."
-  confirmed: "The :attribute confirmation does not match."
-  date: "The :attribute is not a valid date."
-  date_format: "The :attribute does not match the format :other."
-  different: "The :attribute and :other must be different."
-  digits: "The :attribute must be :digits digits."
-  digits_between: "The :attribute must be between :min and :max digits."
-  dimensions: "The :attribute has invalid image dimensions."
-  distinct: "The :attribute field has a duplicate value."
-  email: "The :attribute must be a valid email address."
-  exists: "The selected :attribute is invalid."
-  file: "The :attribute must be a file."
-  filled: "The :attribute field is required."
-  image: "The :attribute must be an image."
-  in: "The selected :attribute is invalid."
-  in_array: "The :attribute field does not exist in :other."
-  integer: "The :attribute must be an integer."
-  ip: "The :attribute must be a valid IP address."
-  json: "The :attribute must be a valid JSON string."
+    numeric: ":attribute moet liggen tussen :min en :max."
+    file: ":attribute moet tussen :min en :max kilobytes zijn."
+    string: ":attribute moet tussen :min en :max tekens zijn."
+    array: ":attribute moet tussen :min en :max items bevatten."
+  boolean: ":attribute veld moet waar of onwaar zijn."
+  confirmed: ":attribute bevestiging komt niet overeen."
+  date: ":attribute is geen geldige datum."
+  date_format: ":attribute komt niet overeen met formaat :other."
+  different: ":attribute en :other moeten verschillend zijn."
+  digits: ":attribute moet bestaan uit :digits cijfers."
+  digits_between: ":attribute moet bestaan uit tussen de :min en :max cijfers."
+  dimensions: ":attribute heeft een ongeldige afbeeldingsafmetingen."
+  distinct: ":attribute heeft eenzelfde waarde."
+  email: ":attribute moet een geldig e-mailadres zijn."
+  exists: "geselecteerde :attribute is ongeldig."
+  file: ":attribute moet een bestand zijn."
+  filled: ":attribute is vereist."
+  image: ":attribute moet een afbeelding zijn."
+  in: "geselecteerde :attribute is ongeldig."
+  in_array: ":attribute bestaat niet in :other."
+  integer: ":attribute moet een integer zijn."
+  ip: ":attribute moet een geldig IP-adres zijn."
+  json: ":attribute moet een geldige JSON-string zijn."
   max:
-    numeric: "The :attribute may not be greater than :max."
-    file: "The :attribute may not be greater than :max kilobytes."
-    string: "The :attribute may not be greater than :max characters."
-    array: "The :attribute may not have more than :max items."
-  mimes: "The :attribute must be a file of type: :values."
-  mimetypes: "The :attribute must be a file of type: :values."
+    numeric: ":attribute mag niet groter zijn dan :max."
+    file: ":attribute mag niet groter zijn dan :max kilobytes."
+    string: ":attribute mag niet groter zijn dan :max tekens."
+    array: ":attribute mag niet meer dan :max items zijn."
+  mimes: ":attribute moet een bestand zijn van het type: :values."
+  mimetypes: ":attribute moet een bestand zijn van het type :values."
   min:
-    numeric: "The :attribute must be at least :min."
-    file: "The :attribute must be at least :min kilobytes."
-    string: "The :attribute must be at least :min characters."
-    array: "The :attribute must have at least :min items."
-  not_in: "The selected :attribute is invalid."
-  numeric: "The :attribute must be a number."
-  present: "The :attribute field must be present."
-  regex: "The :attribute format is invalid."
-  required: "The :attribute field is required."
-  required_if: "The :attribute field is required when :other is :value."
-  required_unless: "The :attribute field is required unless :other is in :values."
-  required_with: "The :attribute field is required when :values is present."
-  required_with_all: "The :attribute field is required when :values is present."
-  required_without: "The :attribute field is required when :values is not present."
-  required_without_all: "The :attribute field is required when none of :values are present."
-  same: "The :attribute and :other must match."
+    numeric: ":attribute moet tenminste :min zijn."
+    file: ":attribute moet groter zijn dan :min kilobytes."
+    string: ":attribute moet meer zijn dan :min tekens."
+    array: ":attribute moet meer dan :min items zijn."
+  not_in: "geselecteerde :attribute is ongeldig."
+  numeric: ":attribute moet een getal zijn."
+  present: ":attribute veld moet aanwezig zijn."
+  regex: ":attribute formaat is ongeldig."
+  required: ":attribute veld is vereist."
+  required_if: ":attribute veld is vereist als :other is :value."
+  required_unless: ":attribute veld is vereist tenzij :other is in :values."
+  required_with: ":attribute veld is vereist wanneer :values aanwezig is."
+  required_with_all: ":attribute veld is vereist wanneer :values aanwezig is."
+  required_without: ":attribute field is vereist wanneer :values niet aanwezig is."
+  required_without_all: ":attribute field is vereist wanneer geen van :values aanwezig is."
+  same: ":attribute and :other must match."
   size:
-    numeric: "The :attribute must be :size."
-    file: "The :attribute must be :size kilobytes."
-    string: "The :attribute must be :size characters."
-    array: "The :attribute must contain :size items."
-  string: "The :attribute must be a string."
-  timezone: "The :attribute must be a valid zone."
-  unique: "The :attribute has already been taken."
-  uploaded: "The :attribute failed to upload."
-  url: "The :attribute format is invalid."
+    numeric: ":attribute moet zijn :size."
+    file: ":attribute moet :size kilobytes zijn."
+    string: ":attribute moet :size tekens zijn."
+    array: ":attribute moet :size items bevatten."
+  string: ":attribute moet een string zijn."
+  timezone: ":attribute moet een geldige zone zijn."
+  unique: ":attribute is reeds bezet."
+  uploaded: ":attribute upload is mislukt."
+  url: ":attribute formaat is ongeldig."
 
   attributes:
-    username: username
-    password: password
-    email: email
-    title: title
-    content: content
-    name_singular: singular name
-    name_plural: plural name
-    tag_count_primary: number of primary tags
-    tag_count_secondary: number of secondary tags
+    username: gebruikersnaam
+    password: wachtwoord
+    email: e-mailadres
+    title: titel
+    content: inhoud
+    name_singular: enkelvoud
+    name_plural: meervoud
+    tag_count_primary: aantal primaire labels
+    tag_count_secondary: aantal secundaire labels
