--- a/locale/flarum-likes.yml
+++ b/locale/flarum-likes.yml
@@ -9,7 +9,7 @@ flarum-likes:
 
     # These translations are used in the Permissions page of the admin interface.
     permissions:
-      like_posts_label: Like posts
+      like_posts_label: Vind berichten leuk
 
   # Translations in this namespace are used by the forum user interface.
   forum:
