--- a/locale/flarum-likes.yml
+++ b/locale/flarum-likes.yml
@@ -21,11 +21,11 @@ flarum-likes:
 
     # These translations are displayed beneath individual posts.
     post:
-      like_link: Like
+      like_link: Vind ik leuk
       liked_by_self_text: "{users} vindt dit leuk.|{users} vinden dit leuk."  # Can be pluralized to agree with the number of users!
       liked_by_text: "{users} vindt dit leuk.|{users} vinden dit leuk."
       others_link: => core.ref.some_others
-      unlike_link: Niet leuk
+      unlike_link: Vind ik niet meer leuk
       you_text: => core.ref.you
 
     # These translations are used by the Users Who Like This modal dialog.
